--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 .idea/**/dictionaries
 .idea/**/shelf
 .idea/vcs.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
+.DS_Store
 
 # Generated files
 .idea/**/contentModel.xml
